# memento-mori

./: .gitignore  Dockerfile  LICENSE  README.md  distribution_helper.php  docker-compose.yml  generate_static_site.php  index.html  index.php  instagram_processor.py  local-viewer.html  modal.js  project_plan.md  pyproject.toml  requirements.txt
deprecated_php_utility/: notes.md  style.css
memento-mori/memento_mori/: cli.py  extractor.py  file_mapper.py  generator.py  loader.py  media.py
memento-mori/memento_mori/static/js/: modal.js
memento-mori/memento_mori/templates/: grid.html  index.html
memento_mori/: __init__.py  cli.py  extractor.py  file_mapper.py  generator.py  loader.py  media.py
memento_mori/static/css/: style.css
memento_mori/static/js/: modal.js  stories.js
memento_mori/templates/: index.html  stories.html  stories_page.html
