[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memento-mori"
version = "0.1.0"
description = "Transform Instagram data export into a viewer"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "ftfy==6.3.1",
    "Jinja2==3.0.3",
    "MarkupSafe==2.1.5",
    "opencv_python==4.10.0.84",
    "Pillow==11.1.0",
    "python_magic>=0.4.27",
    "tqdm==4.67.1"
]

[tool.setuptools]
packages = ["memento_mori"]

[project.scripts]
memento-mori = "memento_mori.cli:main"

[project.urls]
"Homepage" = "https://github.com/greg-randall/memento-mori"
"Bug Tracker" = "https://github.com/greg-randall/memento-mori/issues"